# server

./: .dockerignore  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
config/: bsfchat-server.example.toml
src/: main.cpp
src/api/: AuthHandler.cpp  AuthHandler.h  EventHandler.cpp  EventHandler.h  MediaHandler.cpp  MediaHandler.h  PresenceHandler.cpp  PresenceHandler.h  ProfileHandler.cpp  ProfileHandler.h  RoomHandler.cpp  RoomHandler.h  SyncHandler.cpp  SyncHandler.h  TypingHandler.cpp  TypingHandler.h  VoiceHandler.cpp  VoiceHandler.h
src/auth/: AutoJoin.cpp  AutoJoin.h  LocalAuth.cpp  LocalAuth.h  OidcAuth.cpp  OidcAuth.h  Permissions.cpp  Permissions.h  PowerLevels.cpp  PowerLevels.h  RoleBootstrap.cpp  RoleBootstrap.h
src/core/: Config.cpp  Config.h  Logger.cpp  Logger.h  Server.cpp  Server.h
src/http/: HttpServer.cpp  HttpServer.h  Middleware.cpp  Middleware.h  Router.cpp  Router.h
src/storage/: LocalStorage.cpp  LocalStorage.h  MediaStorage.h  S3Client.cpp  S3Client.h  S3Storage.cpp  S3Storage.h
src/store/: Migrations.cpp  Migrations.h  SqliteStore.cpp  SqliteStore.h
src/sync/: SyncEngine.cpp  SyncEngine.h
tests/: CMakeLists.txt  test_auth.cpp  test_media.cpp  test_permissions.cpp  test_rooms.cpp  test_sync.cpp  test_typing.cpp  test_voice.cpp
